Update Docker image to JDK 24
Also, use `-XX:+UseCompactObjectHeaders`.